@@ -68,7 +68,6 @@ Use the above code in your User model and validate OpenID URLs before saving the
 config/routes.rb
 
   map.root :controller => 'articles'
-  map.open_id_complete 'session', :controller => "sessions", :action => "create", :requirements => { :method => :get }
   map.resource :session
 
 
@@ -90,8 +89,8 @@ app/views/sessions/new.erb
     </p>
 
     <p>
-      <label for="openid_url">OpenID:</label>
-      <%= text_field_tag "openid_url" %>
+      <label for="openid_identifier">OpenID:</label>
+      <%= text_field_tag "openid_identifier" %>
     </p>
 
     <p>
