@@ -4,6 +4,7 @@ require 'openid/store/filesystem'
 
 require File.dirname(__FILE__) + '/open_id_authentication/db_store'
 require File.dirname(__FILE__) + '/open_id_authentication/mem_cache_store'
+require File.dirname(__FILE__) + '/open_id_authentication/request'
 require File.dirname(__FILE__) + '/open_id_authentication/timeout_fixes' if OpenID::VERSION == "2.0.4"
 
 module OpenIdAuthentication
@@ -83,13 +84,16 @@ module OpenIdAuthentication
       OpenIdAuthentication.normalize_url(url)
     end
 
-    # The parameter name of "openid_url" is used rather than the Rails convention "open_id_url"
+    # The parameter name of "openid_identifier" is used rather than the Rails convention "open_id_identifier"
     # because that's what the specification dictates in order to get browser auto-complete working across sites
-    def using_open_id?(identity_url = params[:openid_url]) #:doc:
+    def using_open_id?(identity_url = nil) #:doc:
+      identity_url ||= params[:openid_identifier] || params[:openid_url]
       !identity_url.blank? || params[:open_id_complete]
     end
 
-    def authenticate_with_open_id(identity_url = params[:openid_url], options = {}, &block) #:doc:
+    def authenticate_with_open_id(identity_url = nil, options = {}, &block) #:doc:
+      identity_url ||= params[:openid_identifier] || params[:openid_url]
+
       if params[:open_id_complete].nil?
         begin_open_id_authentication(identity_url, options, &block)
       else
@@ -100,10 +104,12 @@ module OpenIdAuthentication
   private
     def begin_open_id_authentication(identity_url, options = {})
       identity_url = normalize_url(identity_url)
-      return_to = options.delete(:return_to)
+      return_to    = options.delete(:return_to)
+      method       = options.delete(:method)
+
       open_id_request = open_id_consumer.begin(identity_url)
       add_simple_registration_fields(open_id_request, options)
-      redirect_to(open_id_redirect_url(open_id_request, return_to))
+      redirect_to(open_id_redirect_url(open_id_request, return_to, method))
     rescue OpenIdAuthentication::InvalidOpenId => e
       yield Result[:invalid], identity_url, nil
     rescue OpenID::OpenIDError, Timeout::Error => e
@@ -141,13 +147,17 @@ module OpenIdAuthentication
       open_id_request.add_extension(sreg_request)
     end
 
-    def open_id_redirect_url(open_id_request, return_to = nil)
+    def open_id_redirect_url(open_id_request, return_to = nil, method = nil)
+      open_id_request.return_to_args['_method'] = (method || request.method).to_s
       open_id_request.return_to_args['open_id_complete'] = '1'
       open_id_request.redirect_url(root_url, return_to || requested_url)
     end
 
     def requested_url
-      "#{request.protocol + request.host_with_port + request.relative_url_root + request.path}"
+      relative_url_root = self.class.respond_to?(:relative_url_root) ?
+        self.class.relative_url_root.to_s :
+        request.relative_url_root
+      "#{request.protocol + request.host_with_port + relative_url_root + request.path}"
     end
 
     def timeout_protection_from_identity_server
